11/05/2012:
	- Modified layer handling to decode all available layers if
	  MAX_LAYERS parameter is set to -1.


08/05/2012:
	- Fix to Mac OSX and FreeBSD compilation of KakaduImage.cc.


07/05/2012:
	- Fixed strip height calculation error in CVT.cc


01/05/2012:
	- Modified memory handling in JPEGCompressor.cc to better handle
	  images where the compressed version may be bigger than the
	  original (for example at very high quality levels).
	- Changes to CVT.cc to work with new JPEGCompressor code and removal
	  of chunked encoding header directive from CVT.cc.
	- Fixed bug in CVT when specifying both WID and HEI.
	- Fixed compiler warning in IIPResponse.cc.
	- Added man page.
	- Added missing definition of get_nprocs() function to Kakadu.cc
	  for Mac OSX and FreeBSD.


20/04/2012:
	- Fixed memory overun error in filter_contrast in Transforms.cc.


18/04/2012:
	- Major rewrite of CVT code to unify TIFF and JPEG2000 region
	  export. Region compositing now in TileManager->getRegion with
	  modified getRegion Kakadu function. Changes also to View class
	  and ColourTransforms code to enable greater modularity for
	  image processing to regions. ColourTransforms renamed to
	  Transforms.
	  Thanks to The National Library of Wales, who will be using
	  iipsrv & iipmooviewer to deliver their Historic Newspapers
	  in 2012.


21/03/2012:
	- Fix to TPTImage.c to force RGB conversion for YCbCr compressed
	  JPEG TIFFs, which is now the default in VIPS. Thanks to John
	  Cupitt for spotting this.


17/03/2012:
	- Changes to View.[h,cc] to make sure getRequestWidth and Height
	  return correctly rounded values.


12/03/2012:
	- Added HTTP Status: 400 Bad Request to error messages.


28/01/2012:
	- Fixes to KakaduImage.cc to properly catch exceptions during file
	  opening and a check for existence during codestream shutdown.
	- Also added a check to updateTimeStamp to throw an exception if file
	  unreadable.


28/08/2011: