@@ -167,6 +167,10 @@ port numbers. For example: localhost,192.168.0.1:8888,192.168.0.2.
 MEMCACHED_TIMEOUT: Time in seconds that cache remains fresh.
 Default is 86400 seconds (24 hours).
 
+INTERPOLATION: Interpolation method to use for rescaling when using image export.
+Integer value. 0 for fastest nearest neighbour interpolation. 1 for bilinear
+interpolation (better quality but about 2.5x slower). Bilinear by default.
+
 DECODER_MODULES: Comma separated list of external modules for decoding 
 other image formats. This is only necessary if you have activated 
 --enable-modules for ./configure and written your own image format 
