@@ -37,6 +37,7 @@
 #define WATERMARK_OPACITY 1.0
 #define LIBMEMCACHED_SERVERS "localhost"
 #define LIBMEMCACHED_TIMEOUT 86400  // 24 hours
+#define INTERPOLATION 1
 
 
 
@@ -202,6 +203,14 @@ class Environment {
   }
 
 
+  static unsigned int getInterpolation(){
+    char* envpara = getenv( "INTERPOLATION" );
+    unsigned int interpolation;
+    if( envpara ) interpolation = atoi( envpara );
+    else interpolation = INTERPOLATION;
+
+    return interpolation;
+  }
 
 
 };
